validator_derive_tests/tests/compile-fail/length/unknown_arg.rs
use validator::Validate;

#[derive(Validate)]
struct Test {
    #[validate(length(eq = 2))]
    s: String,
}

fn main() {}
