validator_derive_tests/tests/compile-fail/length/unknown_arg.stderr
error: Unknown field: `eq`. Did you mean `equal`?
 --> tests/compile-fail/length/unknown_arg.rs:5:23
  |
5 |     #[validate(length(eq = 2))]
  |                       ^^
